--- a/.github/workflows/order-app-publish-docker-images.yml
+++ b/.github/workflows/order-app-publish-docker-images.yml
@@ -33,8 +33,8 @@ jobs:
     - name: Build and push Docker image for Order API
       uses: docker/build-push-action@v2
       with:
-        context: src
-        file: src/OrderApp.OrderApi/Dockerfile
+        context: src/order-app
+        file: src/order-app/OrderApp.OrderApi/Dockerfile
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
@@ -64,8 +64,8 @@ jobs:
     - name: Build and push Docker image for Order API
       uses: docker/build-push-action@v2
       with:
-        context: src
-        file: src/OrderApp.OrderProcessor/Dockerfile
+        context: src/order-app
+        file: src/order-app/OrderApp.OrderProcessor/Dockerfile
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
