--- a/.github/workflows/order-app-publish-docker-images.yml
+++ b/.github/workflows/order-app-publish-docker-images.yml
@@ -3,8 +3,12 @@ name: ORDER APP | Publish Docker images
 on:
   push:
     branches: [ main ]
+    paths:
+      - "src/order-app/**"
   pull_request:
     branches: [ main ]
+    paths:
+      - "src/order-app/**"
 
 jobs:
 
