--- a/.github/workflows/order-app-publish-docker-images.yml
+++ b/.github/workflows/order-app-publish-docker-images.yml
@@ -36,7 +36,7 @@ jobs:
       uses: docker/metadata-action@v2
       with:
         images: ghcr.io/your-azure-coach/yac-order-api
-        tags: latest
+        tags: type=semver,pattern={{version}}
         
     - name: Build and push Docker image for Order API
       uses: docker/build-push-action@v2
