--- a/.github/workflows/order-app-publish-docker-images.yml
+++ b/.github/workflows/order-app-publish-docker-images.yml
@@ -3,8 +3,8 @@ name: ORDER APP | Publish Docker images
 on:
   push:
     branches: [ main ]
-    #paths:
-      #- "src/order-app/**"
+    paths:
+      - "src/order-app/**"
     tags:
       - "v*"
   pull_request:
