--- a/.github/workflows/order-integrations-publish-docker-images.yml
+++ b/.github/workflows/order-integrations-publish-docker-images.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
 
-  Publish-Document-to-Order:
+  Publish-Order-Integrations:
 
     runs-on: ubuntu-latest
 
@@ -33,9 +33,9 @@ jobs:
       uses: docker/metadata-action@v2
       with:
         images: ghcr.io/your-azure-coach/yac-order-integrations
-        tags: latest
+        tags: type=semver,pattern={{version}},value=1.0.0
         
-    - name: Build and push Docker image for Document to Order Logic App
+    - name: Build and push Docker image for Order Integrations Logic App
       uses: docker/build-push-action@v2
       with:
         context: src/order-integrations/OrderIntegrations
