cleanup docker file

--- a/src/order-integrations/OrderIntegrations/Dockerfile
+++ b/src/order-integrations/OrderIntegrations/Dockerfile
@@ -7,20 +7,6 @@ FROM mcr.microsoft.com/azure-functions/dotnet:3.0.14492-appservice as runtime
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot \ AzureFunctionsJobHost__Logging__Console__IsEnabled=true
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot
 ENV AzureFunctionsJobHost__Logging__Console__IsEnabled=true
-
-# ENV WEBSITE_HOSTNAME localhost
-# ENV WEBSITE_SITE_NAME OrderIntegrations
-# ENV AZURE_FUNCTIONS_ENVIRONMENT Development
+ENV WEBSITE_SITE_NAME OrderIntegrations
 
 COPY --from=build /src/app /home/site/wwwroot
-
-
-# FROM mcr.microsoft.com/azure-functions/dotnet:3.0.13614-appservice
-
-# ENV AZURE_FUNCTIONS_ENVIRONMENT=Development
-# ENV AzureWebJobsScriptRoot=/home/site/wwwroot \ AzureFunctionsJobHost__Logging__Console__IsEnabled=true
-# ENV WEBSITE_HOSTNAME localhost
-# ENV WEBSITE_SITE_NAME OrderIntegrations
-# ENV AZURE_FUNCTIONS_ENVIRONMENT Development
-
-# COPY . /home/site/wwwroot
